# hyprstatusbar

./: CMakeLists.txt  configuration.cpp  configuration.h  hyprbar-window.cpp  hyprbar-window.h  main.cpp  topbar.cpp
